+ proper site skeleton ready

--- a/index.html
+++ b/index.html
@@ -18,18 +18,14 @@
   <!-- Script -->
   <script src="script.js"></script>
 
+
   <div class="quote-container" id="quote-container">
 
-    <!-- The Quote Here -->
-    <div class="quote-container" id="quote-container">
+    <div class="quote-text">
 
-      <div class="quote-text">
-
-        <i class="fas fa-quote-left"></i>
-        <span id="quote">What you are is what you have been. What you'll be is what you do now.</span>
-
-      </div>
-
+      <i class="fas fa-quote-left"></i>
+      <span id="quote">What you are is what you have been. What you'll be is what you do now. </span>
+      <i class="fas fa-quote-right"></i>
     </div>
 
 
@@ -40,6 +36,7 @@
       <span id="author"> - Buddha</span>
 
     </div>
+
 
     <!--This is the Button -->
 
@@ -52,14 +49,13 @@
       </button>
 
       <button id="new-quote">
-
         New Quote
       </button>
 
     </div>
 
-
   </div>
+
 </body>
 
 </html>
