--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -24,7 +25,7 @@
     <div class="quote-text">
 
       <i class="fas fa-quote-left"></i>
-      <span id="quote">What you are is what you have been. What you'll be is what you do now. </span>
+      <span id="quote"></span>
       <i class="fas fa-quote-right"></i>
     </div>
 
@@ -33,7 +34,7 @@
 
     <div class="quote-author">
 
-      <span id="author"> - Buddha</span>
+      <span id="author"> </span>
 
     </div>
 
