--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div class="quote-author">
 
       <span id="author"> </span>
+      <span>
+
+        <p>Something for the track.</p>
+      </span>
 
     </div>
 
