--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-  <!-- Script -->
-  <script src="script.js"></script>
+
 
 
   <div class="quote-container" id="quote-container">
@@ -37,7 +36,7 @@
       <span id="author"> </span>
       <span>
 
-        <p>Something for the track.</p>
+        <p></p>
       </span>
 
     </div>
@@ -60,6 +59,13 @@
     </div>
 
   </div>
+
+  <!-- This is our loader -->
+  
+  <div class="loader" id="loader"></div>
+
+    <!-- Script -->
+    <script src="script.js"></script>
 
 </body>
 
